modif des classes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="row g-4 mb-5 justify-content-center">
                 <div class="col-md-4">
                     <a href="https://d-bk.net/fr/d/1Cya6" class="card">
-                        <img src="./Img_cra/air15.png" class="card-img-top" alt="Image 1">
+                        <img src="./Img_panda_air/air15.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Air 15</h5>
                         </div>
@@ -39,7 +39,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="https://d-bk.net/fr/d/1CyaW" class="card">
-                        <img src="./Img_cra/air25.png" class="card-img-top" alt="Image 1">
+                        <img src="./Img_panda_air/air25.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Air 25</h5>
                         </div>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="https://d-bk.net/fr/d/1Cyam" class="card">
-                        <img src="./Img_cra/air42.png" class="card-img-top" alt="Image 1">
+                        <img src="./Img_panda_air/air42.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Air 42</h5>
                         </div>
@@ -60,23 +60,15 @@
             <div class="row g-4 mb-5 justify-content-center">
                 <div class="col-md-4">
                     <a href="https://d-bk.net/fr/d/1CybB" class="card">
-                        <img src="./Img_cra/air70.png" class="card-img-top" alt="Image 1">
+                        <img src="./Img_panda_air/air70.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Air 70</h5>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1Cybi" class="card">
-                        <img src="./Img_cra/air95.png" class="card-img-top" alt="Image 1">
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Air 95</h5>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-4">
                     <a href="https://d-bk.net/fr/d/1CxKS" class="card">
-                        <img src="./Img_cra/air125.png" class="card-img-top" alt="Image 1">
+                        <img src="./Img_panda_air/air125.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Air 125</h5>
                         </div>
@@ -93,7 +85,7 @@
             <div class="row g-4 mb-5 justify-content-center">
                 <div class="col-md-4">
                     <a href="https://d-bk.net/fr/d/1CyA3" class="card">
-                        <img src="./Img_panda/eau15.png" class="card-img-top" alt="Image 1">
+                        <img src="./Img_ougi/eau15.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Eau 15</h5>
                         </div>
@@ -101,7 +93,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="https://d-bk.net/fr/d/1CyAW" class="card">
-                        <img src="./Img_panda/eau25.png" class="card-img-top" alt="Image 1">
+                        <img src="./Img_ougi/eau25.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Eau 25</h5>
                         </div>
@@ -109,7 +101,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="https://d-bk.net/fr/d/1CyB6" class="card">
-                        <img src="./Img_panda/eau42.png" class="card-img-top" alt="Image 1">
+                        <img src="./Img_ougi/eau42.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Eau 42</h5>
                         </div>
@@ -122,37 +114,25 @@
             <div class="row g-4 mb-5 justify-content-center">
                 <div class="col-md-4">
                     <a href="https://d-bk.net/fr/d/1CyCV" class="card">
-                        <img src="./Img_panda/eau60.png" class="card-img-top" alt="Image 1">
+                        <img src="./Img_ougi/eau60.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Eau 60</h5>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1CyEP" class="card">
-                        <img src="./Img_panda/eau95Low.png" class="card-img-top" alt="Image 1">
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Eau 95 Low Cost</h5>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-4">
                     <a href="https://d-bk.net/fr/d/1CyF9" class="card">
-                        <img src="./Img_panda/eau95Premium.png" class="card-img-top" alt="Image 1">
+                        <img src="./Img_ougi/eau95.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Eau 95 Premium</h5>
+                            <h5 class="card-title">Eau 95</h5>
                         </div>
                     </a> 
                 </div>
-            </div>
-
-
-            <div class="row g-4 mb-5 justify-content-center">
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1CyHU" class="card">
-                        <img src="./Img_panda/eau130.png" class="card-img-top" alt="Image 1">
+                    <a href="https://d-bk.net/fr/d/1D6pr" class="card">
+                        <img src="./Img_ougi/eau155.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Eau 130</h5>
+                            <h5 class="card-title">Eau 155</h5>
                         </div>
                     </a>
                 </div>
