--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Air 25</h5>
                         </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1756705" class="btn btn-primary mt-3">Craft</a>
+                        </div>
                     </a>
                 </div>
                 <div class="col-md-4">
@@ -50,6 +53,9 @@
                         <img src="./Img_panda_air/air42.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Air 42</h5>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1756718" class="btn btn-primary mt-3">Craft</a>
                         </div>
                     </a>
                 </div>
@@ -59,18 +65,35 @@
 
             <div class="row g-4 mb-5 justify-content-center">
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1CybB" class="card">
-                        <img src="./Img_panda_air/air70.png" class="card-img-top" alt="Image 1">
+                    <a href="https://d-bk.net/fr/d/1DFFg" class="card">
+                        <img src="./Img_panda_air/air65.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Air 70</h5>
+                            <h5 class="card-title">Air 65</h5>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1756709" class="btn btn-primary mt-3">Craft</a>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1CxKS" class="card">
-                        <img src="./Img_panda_air/air125.png" class="card-img-top" alt="Image 1">
+                    <a href="https://d-bk.net/fr/d/1DFE5" class="card">
+                        <img src="./Img_panda_air/air82.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Air 125</h5>
+                            <h5 class="card-title">Air 82</h5>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1756716" class="btn btn-primary mt-3">Craft</a>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://d-bk.net/fr/d/1DIqd" class="card">
+                        <img src="./Img_panda_air/air110.png" class="card-img-top" alt="Image 1">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Air 110</h5>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757028$" class="btn btn-primary mt-3">Craft</a>
                         </div>
                     </a> 
                 </div>
@@ -97,6 +120,9 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Eau 25</h5>
                         </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1756705" class="btn btn-primary mt-3">Craft</a>
+                        </div>
                     </a>
                 </div>
                 <div class="col-md-4">
@@ -104,6 +130,9 @@
                         <img src="./Img_ougi/eau42.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Eau 42</h5>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757029" class="btn btn-primary mt-3">Craft</a>
                         </div>
                     </a>
                 </div>
@@ -118,6 +147,9 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Eau 60</h5>
                         </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757030" class="btn btn-primary mt-3">Craft</a>
+                        </div>
                     </a>
                 </div>
                 <div class="col-md-4">
@@ -126,6 +158,9 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Eau 95</h5>
                         </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757031" class="btn btn-primary mt-3">Craft</a>
+                        </div>
                     </a> 
                 </div>
                 <div class="col-md-4">
@@ -133,6 +168,9 @@
                         <img src="./Img_ougi/eau155.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Eau 155</h5>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757032" class="btn btn-primary mt-3">Craft</a>
                         </div>
                     </a>
                 </div>
@@ -146,7 +184,7 @@
 
             <div class="row g-4 mb-5 justify-content-center">
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1Cz7y" class="card">
+                    <a href="https://d-bk.net/fr/d/1DIg0" class="card">
                         <img src="./Img_elio/feu15.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Feu 15</h5>
@@ -154,18 +192,24 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1Cz8C" class="card">
+                    <a href="https://d-bk.net/fr/d/1DIg6" class="card">
                         <img src="./Img_elio/feu25.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Feu 25</h5>
                         </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757033" class="btn btn-primary mt-3">Craft</a>
+                        </div>
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1Cz8O" class="card">
+                    <a href="https://d-bk.net/fr/d/1DIgA" class="card">
                         <img src="./Img_elio/feu42.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Feu 42</h5>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757033" class="btn btn-primary mt-3">Craft</a>
                         </div>
                     </a>
                 </div>
@@ -175,18 +219,35 @@
 
             <div class="row g-4 mb-5 justify-content-center">
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1Cz8d" class="card">
-                        <img src="./Img_elio/feu105.png" class="card-img-top" alt="Image 1">
+                    <a href="https://d-bk.net/fr/d/1DIhc" class="card">
+                        <img src="./Img_elio/feu60.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Feu 105</h5>
+                            <h5 class="card-title">Feu 60</h5>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757036" class="btn btn-primary mt-3">Craft</a>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1CzCu" class="card">
+                    <a href="https://d-bk.net/fr/d/1DIgD" class="card">
+                        <img src="./Img_elio/feu105.png" class="card-img-top" alt="Image 1">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Feu 105</h5>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757037" class="btn btn-primary mt-3">Craft</a>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://d-bk.net/fr/d/1DIgd" class="card">
                         <img src="./Img_elio/feu164.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Feu 164</h5>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757038" class="btn btn-primary mt-3">Craft</a>
                         </div>
                     </a>
                 </div>
@@ -199,7 +260,7 @@
 
             <div class="row g-4 mb-5 justify-content-center">
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1CzAE" class="card">
+                    <a href="https://d-bk.net/fr/d/1DIfm" class="card">
                         <img src="./Img_sadi/terre15.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Terre 15</h5>
@@ -207,18 +268,24 @@
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1CzAP" class="card">
+                    <a href="https://d-bk.net/fr/d/1DIfp" class="card">
                         <img src="./Img_sadi/terre25.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Terre 25</h5>
                         </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757033" class="btn btn-primary mt-3">Craft</a>
+                        </div>
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1CzAY" class="card">
+                    <a href="https://d-bk.net/fr/d/1DIfr" class="card">
                         <img src="./Img_sadi/terre42.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
                             <h5 class="card-title">Terre 42</h5>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757039" class="btn btn-primary mt-3">Craft</a>
                         </div>
                     </a>
                 </div>
@@ -228,18 +295,35 @@
 
             <div class="row g-4 mb-5 justify-content-center">
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1CzAr" class="card">
-                        <img src="./Img_sadi/terre90.png" class="card-img-top" alt="Image 1">
+                    <a href="https://d-bk.net/fr/d/1DIoK" class="card">
+                        <img src="./Img_sadi/terre60.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Terre 90</h5>
+                            <h5 class="card-title">Terre 60</h5>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757040" class="btn btn-primary mt-3">Craft</a>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-4">
-                    <a href="https://d-bk.net/fr/d/1CzBP" class="card">
-                        <img src="./Img_sadi/terre143.png" class="card-img-top" alt="Image 1">
+                    <a href="https://d-bk.net/fr/d/1DIft" class="card">
+                        <img src="./Img_sadi/terre90.png" class="card-img-top" alt="Image 1">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Terre 143</h5>
+                            <h5 class="card-title">Terre 90</h5>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757041" class="btn btn-primary mt-3">Craft</a>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="https://d-bk.net/fr/d/1DIfv" class="card">
+                        <img src="./Img_sadi/terre150.png" class="card-img-top" alt="Image 1">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Terre 150</h5>
+                        </div>
+                        <div class="card-body text-center">
+                            <a href="https://www.dofusbook.net/fr/outils/atelier?folder=1757042" class="btn btn-primary mt-3">Craft</a>
                         </div>
                     </a>
                 </div>
